<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <include android:id="@+id/header"
        layout="@layout/layout_header_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:tint="@color/tintlogocolor"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/tvCafe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/cafe_house"
                    android:textColor="@color/endcolorgradient"
                    android:textSize="60sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name_name_com"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_gradient"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <View
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:background="@color/black"
                        android:layout_gravity="center"
                        android:layout_marginEnd="7dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_with"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:background="@color/black"
                        android:layout_gravity="center"
                        android:layout_marginStart="7dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/facebook"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:background="@drawable/bg_fb"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_facebook"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/google"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:background="@drawable/bg_google"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_google"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account_register"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</LinearLayout>